# med-plastic-bot

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  start.py  test_bot_responses.py  test_geography.py  test_problem_questions.py
admin/: main.py
admin/static/css/: admin.css
admin/static/js/: admin.js
admin/templates/: base.html  dashboard.html  dashboard_simple.html  requests.html  services.html
config/: settings.py
handlers/: basic_handlers.py  consultation_handlers.py
keyboards/: reply_keyboards.py
models/: base.py  database.py  repositories.py
services/: llm_service.py  openai_service.py  parser.py  web_search_service.py  website_content_service.py
states/: consultation.py
tests/: test_llm_service.py  test_openai_service.py  test_repositories.py
utils/: logger.py  message_handler.py  message_splitter.py
